--- a/protocols/mti.tex
+++ b/protocols/mti.tex
@@ -11,7 +11,7 @@
     Bob: & ~ b, ~~ K_B = g^b \bmod p. \\
 \end{array}\]
 
-\begin{figure}[thb]
+\begin{figure}
 	\centering
 	\begin{sequencediagram}
 		\newinst{Alice}{Alice}
@@ -20,7 +20,7 @@
 		\mess{Alice}{$ g^{R_A} \bmod p $}{Bob}
 		\mess{Bob}{$ g^{R_B} \bmod p $}{Alice}
 	\end{sequencediagram}
-    \caption{Диаграмма последовательности взаимодействия участников в протоколе MTI/A(0)\label{fig:key_distribution-mti}}
+    \caption{Протокол MTI/A(0)\label{fig:key_distribution-mti}}
 \end{figure}
 
 \begin{protocol}
