Добавлены разделы про эллиптические кривые в скрученной форме Эдварса (by Колыбельников и Владимиров)

--- a/appendix/groups_of_ec_points_over_finite_fields.tex
+++ b/appendix/groups_of_ec_points_over_finite_fields.tex
@@ -261,4 +261,106 @@
     }
 \end{table}
 
+\subsection{Эллиптические кривые в скрученной форме Эдвардса}
+
+Любую эллиптическую кривую с помощью замены координат можно представить в рассмотренной ранее форме Вейерштрасса. Используя данное представление мы ранее ввели операцию сложения точек, умножения точки на число, смогли описать группу точек и циклическую подгруппу. Однако в отдельных случаях эллиптические кривые можно записать в другой, более удобной для частных задач форме. Например, любые эллиптические кривые над алгебраически замкнутым полем можно задать с помощью следующего уравнения:
+
+\[ \begin{array}{l}
+	ax^2+y^2=1+dx^2y^2.
+\end{array} \]
+
+Примеры кривых, заданных этим уравнениям при различных значениях $d$, приведены на рис.~\ref{pic:Edward-curves}. Данное кривые в указанном представлении называются эллиптическими кривыми в скрученной форме Эдвардса (\langen{Twisted Edwards Curves}, \cite{Bernstein:Birkner:Joye:Lange:Peters:2008}).
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.5\textwidth]{pic/Edward-curves}
+	\caption{Эллиптические кривые в скрученной форме Эдвардса при значениях (от внешней фигуры ко внутренней) $d = +0{,}9, -\sqrt{8}, -300$}
+	\label{pic:Edward-curves}
+\end{figure}
+
+Для данной формы формулы сложения точек задаются одним и тем же способом для любых случаев. В этом важное отличие от формы Вейерштрасса, для которой есть частный случай сложения точки самой с собой (с отдельной формулой вычисления угла наклона касательной). Формулы сложения выглядят так:
+
+\[ \begin{array}{ll}
+	P + Q = R \equiv (x_3; y_3), \\
+	
+	\begin{cases}
+		x_3 = \frac{x_1 y_2 + x_2 y_1}{ 1 + dx_1x_2y_1y_2},\\
+		y_3 = \frac{ y_1 y_2 - x_1 x_2 }{1 - d x_1 x_2 y_1 y_2}.\\
+	\end{cases}
+
+\end{array} \]
+
+При переходе к построению кривых над конечным полем, оказывается, что не все кривые, представимые в форме Вейерштрасса, могут быть представлены в скрученной форме Эдвардса. Для этого необходимо, чтобы порядок кривой $\|E\|$ делился на $4$. Однако если такие кривые использовать для криптографических целей, это даёт значимые преимущества:
+
+\begin{itemize}
+	\item меньшая трудоёмкость операций сложения точек;
+	\item отсутствие частных случаев для формул сложения (усложнение атак по сторонним каналам с различением времени);
+\end{itemize}
+
+\subsection{Конвертация из скрученной формы Эдвардса в форму Вейерштрасса}
+
+Кривая в скрученной форме Эдвардса:
+\[eu^2+v^2=1+du^2v^2 \mod p.\]\\
+
+Кривая в форме Вейерштрасса:\\
+\[ y^{2} = x^{3} + ax + b \mod p.\]
+
+Зная коэффициенты $d$ и $e$ кривой в скрученной форме Эдвардса можно найти коэффициенты $a$ и $b$ эквивалентной кривой в форме Вейерштрасса:
+
+\[ \begin{array}{l}
+	s = (e - d)/4, \\
+    t = (e + d)/6, \\
+	a = s^2 - 3t^2, \\
+	b = 2t^3 - ts^2. \\
+\end{array} \]
+
+И определить правила преобразования координат $(u, v)$ и $(x, y)$ между двумя кривыми:
+
+\[ \begin{array}{l}
+(u,v) \longrightarrow(x, y)= (\frac{s(1+v)}{1-v}+t,\frac{s(1+v)}{(1-v)u}), \\
+(x,y) \longrightarrow(u, v)= (\frac{x-t}{y}, \frac{x-t-s}{x-t+s}). \\
+\end{array} \]
+
+Нахождение коэффициентов для кривой в скрученной форме Эдвардса по эквивалентной в форме Вейерштрасса является более сложной и нетривиальной задачей, включающей нахождение корней кубического уравнения $x^{3} + ax + b = 0 \mod p$. Кроме того, как было сказано ранее, не все кривые в форме Вейерштрасса имеют эквивалентную кривую в скрученной форме Эдвардса.
+
+\subsection{Пример группы точек кривой в скрученной форме Эдвардса}
+
+Кривая $x^2+y^2=1+6x^2y^2 \mod 11$.
+
+Все точки кривой:
+
+\[ \begin{array}{lll}
+(0; 1), & (2; 5), & (5; 2), \\
+(1; 0), & (5; 9), & (2; 6), \\
+(0; 10), & (9; 5), & (6; 9), \\
+(10; 0), & (6; 2), & (9; 5). \\
+\end{array} \]
+
+Нейтральным элементом является точка $(0; 1)$. 
+
+Данная группа точек является циклической группой, её генератором выступает точка $(2; 5)$ (рис.~\ref{pic:Twisted-Edwards-Curve-Example}):
+
+\[ \begin{array}{lllllll}
+(2; 5) & \to (6; 9) & \to (10; 0) & \to (6; 2) & \to (2; 6) & \to (0; 10) & \to \\
+       & \to (9; 6) & \to (5; 2)  & \to (1; 0) & \to (5; 9) & \to (9; 5)  & \to (0; 1).
+\end{array} \]
+
+\begin{figure}
+	\centering
+	\includegraphics[width=1\textwidth]{pic/Twisted-Edwards-Curve-Example}
+	\caption{Группа точек эллиптической кривой в скрученной форме Эдвардса $x^2+y^2=1+6x^2y^2 \mod 11$}
+	\label{pic:Twisted-Edwards-Curve-Example}
+\end{figure}
+
+Данная группа изоморфна группе вычетов по сложению $\Z_{12}$. Можно удостовериться, что сложение двух точек $P (6; 9)$ и $Q(10; 0)$ будет соответствовать результату сложения элементов <<2>> и <<3>> в группе $\Z_{12}$:
+
+\[ \begin{array}{l}
+	R = P (6; 9) + Q (10; 0), \\
+	x_R = \frac{x_1 y_2 + x_2 y_1}{1 + d x_1 x_2 y_1 y_2} = \frac{6 \times 0 + 10 \times 9}{1 + 6 \times 6 \times 10 \times 9 \times 0} = \frac{90}{1} = 2 \mod 11, \\
+	y_R = \frac{y_1 y_2 - x_1 x_2}{1 - d x_1 x_2 y_1 y_2} = \frac{9 \times 0 - 6 \times 10}{1 - 6 \times 6 \times 10 \times 9 \times 0} = \frac{-60}{1} = 6 \mod 11, \\
+	R (2; 6) \equiv \text{<<5>>}.
+\end{array} \]
+
+Группа не имеет эквивалентной группы точек эллиптической кривой в форме Вейерштрасса над конечным полем $\F_{11}$. Группа точек соответствующей кривой $y^2 = x^3 + 6 \bmod 11$ имеет только 11 элементов в группе.
+
 \index{группа!точек эллиптической кривой|)}
