--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1397,6 +1397,20 @@
 	language	= {Russian}
 }
 
+@inproceedings{Bernstein:Birkner:Joye:Lange:Peters:2008,
+	author		= {Bernstein, Daniel J. and Birkner, Peter and Joye, Marc and Lange, Tanja and Peters, Christiane},
+	editor		= {Vaudenay, Serge},
+	title		= {Twisted Edwards Curves},
+	booktitle	= {Progress in Cryptology -- AFRICACRYPT 2008},
+	year		= {2008},
+	publisher	= {Springer Berlin Heidelberg},
+	address		= {Berlin, Heidelberg},
+	pages		= {389--405},
+	abstract	= {This paper introduces ``twisted Edwards curves,'' a generalization of the recently introduced Edwards curves; shows that twisted Edwards curves include more curves over finite fields, and in particular every elliptic curve in Montgomery form; shows how to cover even more curves via isogenies; presents fast explicit formulas for twisted Edwards curves in projective and inverted coordinates; and shows that twisted Edwards curves save time for many curves that were already expressible as Edwards curves.},
+	isbn		= {978-3-540-68164-9},
+	language	= {English}
+}
+
 @misc{MS-NLMP,
 	year		= {2009},
 	title		= {NT LAN Manager (NTLM) Authentication Protocol},
