Добавлен раздел про EdDSA и Ed25519

--- a/appendix/groups_of_ec_points_over_finite_fields.tex
+++ b/appendix/groups_of_ec_points_over_finite_fields.tex
@@ -261,7 +261,7 @@
     }
 \end{table}
 
-\subsection{Эллиптические кривые в скрученной форме Эдвардса}
+\subsection{Эллиптические кривые в скрученной форме Эдвардса}\label{sec:twisted-edward-curves}
 
 Любую эллиптическую кривую с помощью замены координат можно представить в рассмотренной ранее форме Вейерштрасса. Используя данное представление мы ранее ввели операцию сложения точек, умножения точки на число, смогли описать группу точек и циклическую подгруппу. Однако в отдельных случаях эллиптические кривые можно записать в другой, более удобной для частных задач форме. Например, любые эллиптические кривые над алгебраически замкнутым полем можно задать с помощью следующего уравнения:
 
