--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1324,6 +1324,20 @@
 	language	= {Russian},
 }
 
+@InProceedings{Bernstein:2006,
+	author		= {Bernstein, Daniel J.},
+	editor		= {Yung, Moti and Dodis, Yevgeniy and Kiayias, Aggelos and Malkin, Tal},
+	title		= {Curve25519: New Diffie-Hellman Speed Records},
+	booktitle	= {Public Key Cryptography -- PKC 2006},
+	year		= {2006},
+	publisher	= {Springer Berlin Heidelberg},
+	address		= {Berlin, Heidelberg},
+	pages		= {207--228},
+	abstract	= {This paper explains the design and implementation of a high-security elliptic-curve-Diffie-Hellman function achieving record-setting speeds: e.g., 832457 Pentium III cycles (with several side benefits: free key compression, free key validation, and state-of-the-art timing-attack protection), more than twice as fast as other authors' results at the same conjectured security level (with or without the side benefits).},
+	isbn		= {978-3-540-33852-9},
+	language	= {English}
+}
+
 @book{Brittain:Darwin:2007,
 	author		= {Brittain, Jason and Darwin, Ian F.},
 	title		= {Tomcat -- The Definitive Guide: Vital Information for Tomcat Programmers and Administrators: Tomcat 6.0 (2. ed.).},
@@ -1478,6 +1492,18 @@
 	publisher	= {Springer Berlin Heidelberg},
 	pages		= {74--91},
 	language	= {English},
+}
+
+@article{Bernstein:Duif:Lange:Schwabe:Yang:2011,
+	author		= {Bernstein, Daniel J. and Duif, Niels and Lange, Tanja and Schwabe, Peter and Yang, Bo-Yin},
+	journal		= {Journal of Cryptographic Engineering},
+	language	= {English},
+	pages		= {77--89},
+	doi         = {10.1007/s13389-012-0027-1},
+	title		= {High-speed high-security signatures},
+	volume		= {2},
+	issue       = {2},
+	year		= {2011},
 }
 
 @book{Sirca:Horvat:2012,
