Дополнение про использование Ed25519

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1651,4 +1651,15 @@
 	volume		= {31},
 	issue       = {12},
 	year		= {2016},
+	language	= {English},
+}
+
+@misc{IANIX:Ed25519:2021,
+	title       = {Things that use Ed25519},
+	url         = {https://ianix.com/pub/ed25519-deployment.html},
+	year        = {2021},
+	month       = {10},
+	day         = {24},
+	publisher   = {IANIX},
+	language	= {English},
 }
