--- a/public-key/EdDSA.tex
+++ b/public-key/EdDSA.tex
@@ -55,3 +55,5 @@ Ed25519 задаёт конкретные параметры схемы EdDSA с
 \end{itemize}
 
 Выбранная группа точек бирационально эквивалентна группе точек над эллиптической кривой в форме Монтгомери Curve25519 (\cite{Bernstein:2006}). Выбранная базовая точка также соответствует базовой точке, предложенной для Curve25519. Так как сложения в скрученной форме Эдвардса выполняются быстрее, чем в форме Вейерштрасса и в форме Монтгомери, группу Ed25519 можно использовать для ускорения вычислений в тех случаях, когда в качестве параметров выбрана группа точек кривой Curve25519.
+
+Схема EdDSA с параметрами Ed25519 используется (\cite{IANIX:Ed25519:2021}) в защищённых сетевых протоколах (SSH\index{протокол!SSH}, I2P\index{протокол!I2P}, IPSec\index{протокол!IPSec}, Tor\index{протокол!Tor}), криптографических библиотеках (GnuPG, Java 15 JCE, OpenSSH 6.5) и стандартах (S/MIME 4.0).
